--- a/in.css
+++ b/in.css
@@ -1,16 +1,17 @@
 header {
     background-color: #1b1b1b;
-    margin: -8px;
-    height: 120px;
-    
+  margin: -8px;
+  margin-top: -20px;
+  height: 110px;
+  width: 100%;
+  position: fixed;
+  z-index: 1;
 }
 
 h1 {
     color: whitesmoke;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 3em;
-    
-    
 }
 
 mark {
@@ -22,9 +23,9 @@ mark {
 }
 
 .semSublinhado {
-    text-decoration: none;
-    color: rgb(7, 7, 7);
-    margin: 10px;
+	text-decoration: none;
+	color: rgb(7, 7, 7);
+	margin: 10px;
 	padding: 0 10px;
 	background: #f2783b ;
 	text-align: center;
@@ -72,12 +73,6 @@ div.scrollmenu a:hover {
 
 }
 
- #empresa{
-    max-width:50px;
-    max-height:45px;
-    width: auto;
-    height: auto;
- }
 
  #imgEmpresa{
     display: flex;
@@ -99,210 +94,222 @@ div.scrollmenu a:hover {
     border-radius: 25px;
   }
 
-  #relatorioTextos{
-    display: flex;
-    flex-wrap: wrap;
-  }
-  
-  #relatorio{
-    display: flex;
-    align-items: center;
-    flex-direction: row-reverse;
-    margin-left: 0px;
-  }
-  
-  .imagens{
-  margin-top: 60px;
-  padding-left: 40px;
-  justify-content: center;
-  }
+  button {
+  padding: 1.3em 3em;
+  font-size: 12px;
+  text-transform: uppercase;
+  letter-spacing: 2.5px;
+  font-weight: 500;
+  color: #000;
+  background-color: #fff;
+  border: none;
+  border-radius: 45px;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease 0s;
+  cursor: pointer;
+  outline: none;
+}
 
- button {
-    padding: 1.3em 3em;
-    font-size: 12px;
-    text-transform: uppercase;
-    letter-spacing: 2.5px;
-    font-weight: 500;
-    color: #000;
-    background-color: #fff;
-    border: none;
-    border-radius: 45px;
-    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-    transition: all 0.3s ease 0s;
-    cursor: pointer;
-    outline: none;
-  }
+button:hover {
+  background-color: rgb(255, 113, 4);
+  box-shadow: 0px 15px 20px rgba(241, 119, 70, 0.4);
+  color: #fff;
+  transform: translateY(-7px);
+}
+
+button:active {
+  transform: translateY(-1px);
+}
+#header{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  height: 105px
+}
+#ajuda{
+  display: flex;
+  background:  rgb(255, 118, 14);
+  color: #fff;
+  flex-direction: column;
+  width: 250px;
+  margin-top: 25px;
+  border-radius: 25px;
+  margin-left: 15px;
+  box-shadow: 3px 3px 3px 2px rgba(0, 0, 0, 0.2);
   
-  button:hover {
-    background-color: rgb(255, 113, 4);
-    box-shadow: 0px 15px 20px rgba(241, 119, 70, 0.4);
-    color: #fff;
-    transform: translateY(-7px);
-  }
   
-  button:active {
-    transform: translateY(-1px);
-  }
-  #header{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    height: 105px
-  }
-  #ajuda{
-    display: flex;
-    background:  rgb(252, 148, 69);
-    color: #fff;
-    flex-direction: column;
-    width: 250px;
-    margin-top: 25px;
-    border-radius: 25px;
-    margin-left: 15px;
-    box-shadow: 3px 3px 3px 2px rgba(0, 0, 0, 0.2);
-    
-    
-  }
-  .duvida{
-    margin: 4px;
-    margin-left: 15px;
-    font-size: larger;
-    
-  }
- 
-  a{
-    color: #fff;
-  }
-  .mae {
-    margin: 0;
-    padding: 0;
+}
+.duvida{
+  margin: 4px;
+  margin-left: 15px;
+  font-size: larger;
+  
+}
+
+a{
+  color: #fff;
+}
+.mae {
+  margin-top: 0px;
+  padding: 0;
+  
 }
 
 .carousel-container {
-    position: relative;
-    overflow: hidden;
-    margin: 20px auto;
-    max-width: 85%;
-    max-height: 60%; ;
+  position: relative;
+  overflow: hidden;
+  margin: 20px auto;
+  max-width: 85%;
+  max-height: 60%; ;
 }
 
 .carousel-track {
-    display: flex;
-    transition: transform 0.5s ease-in-out;
+  display: flex;
+  transition: transform 0.5s ease-in-out;
 }
 
 .carousel-slide {
-    min-width: 100%;
+  min-width: 100%;
 }
 
 .bn {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .carousel-button {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    font-size: 10px;
-    background: none;
-    border: none;
-    color: #fff;
-    cursor: pointer;
-    outline: none;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  font-size: 10px;
+  background: none;
+  border: none;
+  color: #fff;
+  cursor: pointer;
+  outline: none;
 }
 
 #prevBtn {
-    left: 10px;
+  left: 10px;
 }
 
 #nextBtn {
-    right: 10px;
+  right: 10px;
 }
 
 .modal {
-  display: none;
-  position: fixed;
-  z-index: 1;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: rgb(0,0,0);
-  background-color: rgba(0,0,0,0.4);
-  
+display: none;
+position: fixed;
+z-index: 1;
+left: 0;
+top: 0;
+width: 100%;
+height: 100%;
+overflow: auto;
+background-color: rgb(0,0,0);
+background-color: rgba(0,0,0,0.4);
+
 }
 
 
 .modal-content {
-  background-color: #363636;
-  margin: 5% auto;
-  border: 1px solid #20202088;
-  width: 100%;
-  height: 40%;
-  text-align: center;
-  display: block;
-  margin: 0px;
-  
+background-color: #363636;
+margin: 5% auto;
+border: 1px solid #20202088;
+width: 100%;
+height: 40%;
+text-align: center;
+display: block;
+margin: 0px;
+
 }
 
 
 .close {
-  color: #aaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
+color: #aaa;
+float: right;
+font-size: 28px;
+font-weight: bold;
 }
 
 .close:hover,
 .close:focus {
-  color: black;
-  text-decoration: none;
-  cursor: pointer;
+color: black;
+text-decoration: none;
+cursor: pointer;
 }
 
 label{
-  display: block;
+display: block;
 }
 input{
-  background-color: #777;
-  border: none;
-  padding: 6px;
-  margin-bottom: 9px;
-  border-radius: 60px;
+background-color: #777;
+border: none;
+padding: 6px;
+margin-bottom: 9px;
+border-radius: 60px;
 }
 
 .col-container {
-    display: flex; 
-    justify-content: center;
-    padding-top: 20px;
+  display: flex; 
+  justify-content: center;
+  padding-top: 20px;
 }
 
 .col {
-    width: 15%;
-    height: 40%;
-    margin: 10px;
-    padding: 20px;
-    border: 1px solid #ccc;
+  width: 15%;
+  height: 40%;
+  margin: 10px;
+  padding: 20px;
+  border: 1px solid #ccc;
+  text-align: center;
 }
+
 
 
 .col p{
-    font-size: larger;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    color: #F15001;
+  font-size: larger;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  color: #F15001;
 }
 
 h2{
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    color: #000;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  color: #000;
 }
 
 .caix{
-    display: flex;
-    justify-content: center;
+  text-align: center;
+
 }
+
+.bi{
+  color: #ffffff;
+  height: 90px;
+  width: 90px;
+  text-align: center;
+}
+
+#relatorioTextos{
+display: flex;
+flex-wrap: wrap;
+}
+
+#relatorio{
+display: flex;
+align-items: center;
+flex-direction: row-reverse;
+margin-left: 0px;
+}
+
+footer{
+  background-color: #1b1b1b;
+  margin: -8px;
+  height: 120px;
+  color:white;
+}
+
  
 
 
